admin: article settings renamed to loyalty program

--- a/templates/Admin/Content/ArticleSettings/setting.html.twig
+++ b/templates/Admin/Content/ArticleSettings/setting.html.twig
@@ -1,7 +1,7 @@
 {% extends '@ShopsysFramework/Admin/Layout/layoutWithPanel.html.twig' %}
 
-{% block title %}- {{ 'Nastavení přiřazení článků'|trans }}{% endblock %}
-{% block h1 %}{{ 'Nastavení přiřazení článků'|trans }}{% endblock %}
+{% block title %}- {{ 'Věrnostní program'|trans }}{% endblock %}
+{% block h1 %}{{ 'Věrnostní program'|trans }}{% endblock %}
 
 {% block main_content %}
 
