--- a/src/Resources/styles/front/common/components/list/article-product.less
+++ b/src/Resources/styles/front/common/components/list/article-product.less
@@ -54,6 +54,8 @@
             }
 
             &__availability {
+                margin-bottom: 10px;
+                
                 color: @color-brown-light;
                 font-size: @font-size-extra-small;
             }
