Hid original form for payment selection on change payment page.

--- a/templates/Front/Content/Order/changePayment.html.twig
+++ b/templates/Front/Content/Order/changePayment.html.twig
@@ -14,46 +14,48 @@
 {% block main_content %}
     <div class="web__line">
         <div class="web__container">
-            {{ form_start(form) }}
-            <div class="display-none">{{ form_errors(form.payment) }}</div>
+            <div class="js-change-payment-container">
+                {{ form_start(form) }}
+                <div class="display-none">{{ form_errors(form.payment) }}</div>
 
-            <div class="wrap-box wrap-box--with-form">
-                <div class="wrap-box__in">
-                    <div class="wrap-box__block">
-                        <h2>
-                            {{ 'Během placení objednávky došlo k potížím'|trans }}
-                        </h2>
-                    </div>
-                    <div class="wrap-box__block">
-                        <p>
-                            {% trans with {'%orderNumber%': order.number} %}
-                                Pro úspěšné dokončení objednávky č. <strong>%orderNumber%</strong> zkuste zopakovat platbu, nebo si zvolte jiný způsob platby
-                            {% endtrans %}
-                        </p>
-                    </div>
-                    <div class="wrap-box__block">
-                        {% for child in form.payment %}
-                            {% set choice = form.payment.vars.choices[child.vars.name] %}
-                            {% set payment = choice.data %}
+                <div class="wrap-box wrap-box--with-form">
+                    <div class="wrap-box__in">
+                        <div class="wrap-box__block">
+                            <h2>
+                                {{ 'Během placení objednávky došlo k potížím'|trans }}
+                            </h2>
+                        </div>
+                        <div class="wrap-box__block">
+                            <p>
+                                {% trans with {'%orderNumber%': order.number} %}
+                                    Pro úspěšné dokončení objednávky č. <strong>%orderNumber%</strong> zkuste zopakovat platbu, nebo si zvolte jiný způsob platby
+                                {% endtrans %}
+                            </p>
+                        </div>
+                        <div class="wrap-box__block">
+                            {% for child in form.payment %}
+                                {% set choice = form.payment.vars.choices[child.vars.name] %}
+                                {% set payment = choice.data %}
 
-                            {% if payment is not same as (unsuccessfulPayment) %}
-                                <label for="{{child.vars.id}}" class="btn margin-right-10">
-                                    {{ form_widget(child, { attr: { class: 'display-none js-order-change-payment', 'data-id': payment.id} }) }}
-                                    <span class="payment-name">{{ payment.name }}</span>
-                                    <span class="payment-price">{{ payment.getPrice(getDomain().id).price|priceText }}</span>
-                                </label>
-                            {% endif %}
-                        {% endfor %}
-                        <a href="{{ url('front_order_repeat_gopay_payment', { urlHash: order.urlHash }) }}" class="btn margin-right-10">
-                            <span class="payment-name">{{ 'Opakovat platbu'|trans }}</span>
-                        </a>
+                                {% if payment is not same as (unsuccessfulPayment) %}
+                                    <label for="{{child.vars.id}}" class="btn margin-right-10">
+                                        {{ form_widget(child, { attr: { class: 'display-none js-order-change-payment', 'data-id': payment.id} }) }}
+                                        <span class="payment-name">{{ payment.name }}</span>
+                                        <span class="payment-price">{{ payment.getPrice(getDomain().id).price|priceText }}</span>
+                                    </label>
+                                {% endif %}
+                            {% endfor %}
+                            <a href="{{ url('front_order_repeat_gopay_payment', { urlHash: order.urlHash }) }}" class="btn margin-right-10">
+                                <span class="payment-name">{{ 'Opakovat platbu'|trans }}</span>
+                            </a>
+                        </div>
                     </div>
                 </div>
+
+                {% do form.goPayBankSwift.setRendered %}
+
+                {{ form_end(form) }}
             </div>
-
-            {% do form.goPayBankSwift.setRendered %}
-
-            {{ form_end(form) }}
         </div>
     </div>
 {% endblock %}
