--- a/templates/Front/Content/Product/listByBrand.html.twig
+++ b/templates/Front/Content/Product/listByBrand.html.twig
@@ -41,7 +41,7 @@
                         {{ render(controller('App\\Controller\\Front\\ProductController:selectOrderingModeForSearchAction')) }}
                     </div>
                 </div>
-                {% include 'Front/Content/Product/productsWithControls.html.twig' with {paginationResult: paginationResult, filterFormSubmitted: false } %}
+                {% include 'Front/Content/Product/productsWithControls.html.twig' with {paginationResult: paginationResult, filterFormSubmitted: false, hiddenFilterFormButton: true } %}
             </div>
 
         </div>
