design: add style for newsletter in footer

--- a/src/Resources/styles/front/common/components/form/choice.less
+++ b/src/Resources/styles/front/common/components/form/choice.less
@@ -12,6 +12,10 @@
 
     &__line {
         display: block;
+
+        .form-choice--white-text & {
+            color: @color-f;
+        }
     }
 
     &__input {
