--- a/src/Resources/styles/front/common/layout/header/search-hint.less
+++ b/src/Resources/styles/front/common/layout/header/search-hint.less
@@ -84,6 +84,8 @@
         border-radius: @radius;
 
         &__item {
+            border-radius: @radius;
+            
             &:hover {
                 box-shadow: @shadow;
             }
