--- a/src/Resources/styles/front/common/components/box/progress.less
+++ b/src/Resources/styles/front/common/components/box/progress.less
@@ -12,9 +12,15 @@
     align-items: center;
     justify-content: center;
     margin: 0 -@web-padding-small 30px;
+    overflow: hidden;
+    
+    border-radius: @radius;
 
     @media @query-lg {
         flex-direction: row;
+        overflow: visible;
+
+        border-radius: 0;
     }
 
     &__item {
