--- a/src/Resources/styles/front/common/components/wrap/box.less
+++ b/src/Resources/styles/front/common/components/wrap/box.less
@@ -10,6 +10,10 @@
         &:last-of-type {
             margin-bottom: 0;
         }
+
+        .payment-price {
+            color: @color-add;
+        }
     }
 
     &__title {
@@ -23,6 +27,14 @@
 
     &__in {
         padding: 20px;
+    }
+
+    &__button {
+        margin: 0 10px 10px 0;
+
+        &__price {
+            color: @color-add;
+        }
     }
 
     &--narrow {
