--- a/templates/Front/Content/Order/changePayment.html.twig
+++ b/templates/Front/Content/Order/changePayment.html.twig
@@ -38,15 +38,15 @@
                                 {% set payment = choice.data %}
 
                                 {% if payment is not same as (unsuccessfulPayment) %}
-                                    <label for="{{child.vars.id}}" class="btn margin-right-10">
+                                    <label for="{{child.vars.id}}" class="btn wrap-box__button">
                                         {{ form_widget(child, { attr: { class: 'display-none js-order-change-payment', 'data-id': payment.id} }) }}
-                                        <span class="payment-name">{{ payment.name }}</span>
-                                        <span class="payment-price">{{ payment.getPrice(getDomain().id).price|priceText }}</span>
+                                        <span class="wrap-box__button__name">{{ payment.name }}</span>
+                                        <span class="wrap-box__button__price">{{ payment.getPrice(getDomain().id).price|priceText }}</span>
                                     </label>
                                 {% endif %}
                             {% endfor %}
-                            <a href="{{ url('front_order_repeat_gopay_payment', { urlHash: order.urlHash }) }}" class="btn margin-right-10">
-                                <span class="payment-name">{{ 'Opakovat platbu'|trans }}</span>
+                            <a href="{{ url('front_order_repeat_gopay_payment', { urlHash: order.urlHash }) }}" class="btn wrap-box__button">
+                                <span class="wrap-box__button__name">{{ 'Opakovat platbu'|trans }}</span>
                             </a>
                         </div>
                     </div>
