Added a condition to show different availability in product lists when selling is denied.

--- a/templates/Front/Content/Product/productListMacro.html.twig
+++ b/templates/Front/Content/Product/productListMacro.html.twig
@@ -51,9 +51,15 @@
                                         <span class="in-badge in-badge--product-list">{{ parameterValue }}</span>
                                     {% endfor %}
                                     <div class="list-products__item__info__availability__spacer"></div>
-                                    <div class="list-products__item__info__availability__text" style="color: {{ getAvailabilityColor(productView.availability) }};">
-                                        {{ productView.availability }}
-                                    </div>
+                                    {% if productView.action.sellingDenied %}
+                                        <div class="{{ listCssClass }}__item__info__availability__text" style="color: #6d6868;">
+                                            {{ 'Product no longer on sale'|trans }}
+                                        </div>
+                                    {% else %}
+                                        <div class="list-products__item__info__availability__text" style="color: {{ getAvailabilityColor(productView.availability) }};">
+                                            {{ productView.availability }}
+                                        </div>
+                                    {% endif %}
                                 </div>
 
                                 {% if productView.getRandomGiftName() is not null %}
@@ -164,9 +170,15 @@
                                         {% endfor %}
 
                                         <div class="{{ listCssClass }}__item__info__availability__spacer"></div>
-                                        <div class="{{ listCssClass }}__item__info__availability__text" style="color: #7bbd70;">
-                                            {{ productView.availability }}
-                                        </div>
+                                        {% if productView.action.sellingDenied %}
+                                            <div class="{{ listCssClass }}__item__info__availability__text" style="color: #6d6868;">
+                                                {{ 'Product no longer on sale'|trans }}
+                                            </div>
+                                        {% else %}
+                                            <div class="{{ listCssClass }}__item__info__availability__text" style="color: #7bbd70;">
+                                                {{ productView.availability }}
+                                            </div>
+                                        {% endif %}
                                     </div>
                                 </div>
                             </a>
