--- a/src/Resources/styles/front/common/todo.less
+++ b/src/Resources/styles/front/common/todo.less
@@ -39,7 +39,7 @@ button.active {
     padding-bottom: 50px;
 }
 //TODO KOD: US-7685
-.box-detail-add__action__spinbox, .table-cart__cell__spinbox {
+.box-detail-add__action__spinbox, .table-cart__cell__spinbox, .in-add-to-cart__spinbox {
     .in-message {
         position: absolute;
         margin-top: -35px;
