--- a/templates/Front/Content/Product/productListMacro.html.twig
+++ b/templates/Front/Content/Product/productListMacro.html.twig
@@ -70,7 +70,7 @@
 
                             <div class="list-products__item__hover">
                                 <div class="list-products__item__hover__wrap">
-                                    {{ render(controller('App\\Controller\\Front\\CartController:productActionAction', { productActionView: productView.action, type: 'small' } )) }}
+                                    {{ render(controller('App\\Controller\\Front\\CartController:addProductFormAction', { product: productView.action.id, type: 'small' } )) }}
                                 </div>
                             </div>
                         </div>
