design: edit style of newsletter and hide error messages

--- a/src/Resources/styles/front/common/layout/footer.less
+++ b/src/Resources/styles/front/common/layout/footer.less
@@ -177,10 +177,11 @@
     display: flex;
     flex-direction: column;
     margin-left: -@footer-newsletter-item-gap;
-    padding-top: 20px;
+    padding-top: 30px;
 
     @media @query-vl {
         flex-direction: row;
+        align-items: flex-start;
     }
 
     &__item {
