--- a/src/Resources/styles/front/common/components/list/cart-preview.less
+++ b/src/Resources/styles/front/common/components/list/cart-preview.less
@@ -11,6 +11,10 @@
     display: flex;
     flex-direction: column;
 
+    &__title {
+        margin-bottom: 10px;
+    }
+
     &__item {
         width: 100%;
         display: flex;
