--- a/src/Resources/styles/front/common/components/list/order-gifts.less
+++ b/src/Resources/styles/front/common/components/list/order-gifts.less
@@ -24,10 +24,6 @@
             width: calc(~"100% / 4 - @{list-order-gifts-item-gap}");
         }
 
-        @media @query-xl {
-            width: calc(~"100% / 6 - @{list-order-gifts-item-gap}");
-        }
-
         &__label {
             display: flex;
             flex-direction: column;
@@ -76,6 +72,7 @@
 
             .input-label {
                 padding-right: 0;
+                cursor: pointer;
             }
         }
     }
