--- a/templates/Front/Content/Order/preview.html.twig
+++ b/templates/Front/Content/Order/preview.html.twig
@@ -37,13 +37,14 @@
                     {% set quantifiedProductPrice = orderPreview.quantifiedItemsPrices[quantifiedProductKey] %}
                     {{ _self.productPreviewItem(quantifiedProduct.product, quantifiedProduct.quantity, quantifiedProductPrice.totalPrice.priceWithVat) }}
                 {% endfor %}
+            </ul>
+            <ul class="list-cart-preview">
                 {% set orderGiftProduct = orderPreview.orderGiftProduct %}
+                <li class="list-cart-preview__title">{{ 'Dárek k vaší objednávce:'|trans }}</li>
                 {% if orderGiftProduct is not null %}
-                    <li>{{ 'Dárek k vaší objednávce:'|trans }}</li>
                     {{ _self.productPreviewItem(orderGiftProduct, 1, orderGiftProductPrice) }}
                 {% endif %}
                 {% if orderPreview.gifts is not empty %}
-                    <li>{{ 'Dárky k vaší objednávce:'|trans }}</li>
                     {% for gift in orderPreview.gifts %}
                         {{ _self.productPreviewItem(gift.product, gift.quantity, gift.totalPrice) }}
                     {% endfor %}
