--- a/src/Resources/styles/front/common/components/in/user-text.less
+++ b/src/Resources/styles/front/common/components/in/user-text.less
@@ -6,7 +6,7 @@
 @in-user-text-title-font-size: 24px;
 @in-user-text-title-gap: 20px;
 
-@in-user-text-font-size: 20px;
+@in-user-text-font-size: @font-size;
 
 .in-user-text {
     line-height: @in-user-text-font-size + 16px;
