--- a/src/Resources/styles/front/common/components/list/variants.less
+++ b/src/Resources/styles/front/common/components/list/variants.less
@@ -67,6 +67,7 @@
             margin: 0 -@list-variants-item-padding;
             width: calc(~"100% + 2*@{list-variants-item-padding}");
             height: @list-variants-item-size - 4px;
+            text-align: center;
 
             cursor: pointer;
         }
