--- a/templates/Front/Content/Customer/edit.html.twig
+++ b/templates/Front/Content/Customer/edit.html.twig
@@ -48,7 +48,7 @@
                             <div class="form-line__input">
                                 <label class="input-label">{{ 'Heslo'|trans }}</label>
                                 {{ form_widget(form.customerUserData.password.first, { label: 'Password'|trans}) }}
-                                <i class="svg svg-info in-icon in-icon--info form-line__info js-tooltip"
+                                <i class="svg svg-info in-icon in-icon--info js-tooltip"
                                     data-toggle="tooltip"
                                     data-placement="right"
                                     title=""
