--- a/src/Resources/styles/front/common/components/form/error.less
+++ b/src/Resources/styles/front/common/components/form/error.less
@@ -29,8 +29,8 @@
 
         li {
             color: @color-red;
-            font-size: 16px;
             font-weight: 700;
+            font-size: @font-size-small;
         }
     }
 }
