--- a/src/Resources/styles/front/common/components/list/benefits.less
+++ b/src/Resources/styles/front/common/components/list/benefits.less
@@ -98,14 +98,15 @@
             width: calc(~"@{calc-base} - @{list-benefits-icon-size}");
             padding-left: 12px;
 
-            color: @color-brown;
             font-size: 15px;
-            font-weight: bold;
-            text-transform: uppercase;
 
             .list-benefits--small & {
                 width: calc(~"@{calc-base} - @{list-benefits-icon-size-small}");
                 font-size: @font-size-small
+            }
+
+            &__link {
+                font-weight: 700;
             }
         }
     }
