--- a/src/Resources/styles/front/common/helpers/main.less
+++ b/src/Resources/styles/front/common/helpers/main.less
@@ -90,7 +90,7 @@
         height: 1px;
         width: 100%;
         left: 0;
-        bottom: -2px;
+        bottom: 0;
 
         background-color: @color-gray-light;
     }
