--- a/src/Resources/styles/front/common/layout/header/cart-detail.less
+++ b/src/Resources/styles/front/common/layout/header/cart-detail.less
@@ -126,7 +126,7 @@
         line-height: 28px;
 
         background-color: @color-f;
-        border-top: 1px solid @color-gray;
+        border-top: 1px solid @color-border;
 
         &__text {
             width: 100%/2;
